Update cache-valid-time to be 0 so it can refresh cache

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,2 +1,6 @@
+# code: language=ansible
 ---
-# handlers file for ansible-docker
+- name: Restart Docker
+  ansible.builtin.service:
+    name: docker
+    state: restarted
